--- a/index.html
+++ b/index.html
@@ -1,61 +1,170 @@
+<!-- index.html (Bigger headings + bigger nav links + full-height quote container) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do App</title>
-    <!-- Font Awesome for Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- Background Elements -->
-    <div class="background-effects">
-        <div class="gradient-sphere sphere-1"></div>
-        <div class="gradient-sphere sphere-2"></div>
-        <div class="grid-overlay"></div>
-        <div class="noise-overlay"></div>
-        <div class="particles-container" id="particles-container"></div>
-    </div>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>To‑Do List & Reminders</title>
 
-    <!-- Main Content Wrapper -->
-    <div class="content-wrapper">
-        <!-- Left Column: App Sections -->
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+
+  <!-- Tailwind Play CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css"/>
+</head>
+<body class="text-gray-200 min-h-screen">
+
+  <!-- Background -->
+  <div class="background-effects">
+    <div class="gradient-sphere sphere-1"></div>
+    <div class="gradient-sphere sphere-2"></div>
+    <div class="grid-overlay"></div>
+    <div class="noise-overlay"></div>
+    <div class="particles-container" id="particles-container"></div>
+  </div>
+
+  <!-- Top Navbar -->
+  <header class="sticky top-0 z-40 bg-black/30 backdrop-blur-xl border-b border-white/10">
+    <nav class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <i class="fas fa-check-double text-purple-400 text-2xl"></i>
+        <span class="font-semibold text-xl tracking-wide">To‑Do List & Reminders</span>
+      </div>
+      <ul class="flex items-center gap-3 text-base">
+        <li><a href="#/tasks" class="nav-link px-4 py-2 rounded hover:bg-white/10">Tasks</a></li>
+        <li><a href="#/planned" class="nav-link px-4 py-2 rounded hover:bg-white/10">Planned</a></li>
+        <li><a href="#/settings" class="nav-link px-4 py-2 rounded hover:bg-white/10">Settings</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="max-w-7xl mx-auto p-4 md:p-6 lg:p-8">
+
+    <!-- Tasks Dashboard -->
+    <section id="page-tasks" class="route hidden">
+      <div class="content-wrapper tasks-wide">
+        <!-- Left -->
         <div class="main-column">
-            <main class="app-section">
-                <h1 id="main-title"></h1>
-                <form id="task-form">
-                    <input type="text" id="task-title" class="form-input" placeholder="Add a new task..." required>
-                    <div class="form-row">
-                        <input type="text" id="task-category" class="form-input" placeholder="Category">
-                        <input type="datetime-local" id="task-deadline" class="form-input">
-                        <select id="task-priority">
-                            <option value="low">Low</option>
-                            <option value="medium" selected>Medium</option>
-                            <option value="high">High</option>
-                        </select>
-                        <button type="submit" class="btn"><i class="fas fa-plus"></i></button>
-                    </div>
-                </form>
-                <div id="task-list"></div>
-            </main>
+          <main class="app-section">
+            <h1 id="main-title" class="text-4xl"></h1>
+
+            <!-- My Day / All -->
+            <div class="flex gap-2 mb-4">
+              <button id="btn-myday" class="px-4 py-2 rounded bg-white/10 hover:bg-white/15 text-base">My Day</button>
+              <button id="btn-all" class="px-4 py-2 rounded bg-white/10 hover:bg-white/15 text-base">All</button>
+            </div>
+
+            <!-- Sorting & Theme -->
+            <div class="flex flex-col sm:flex-row items-start sm:items-center gap-4 mb-5">
+              <div class="flex items-center gap-3">
+                <label class="text-base opacity-80">Sorting</label>
+                <select id="sort-select" class="bg-black/40 border border-white/10 rounded p-3 text-base">
+                  <option value="created-desc">Created (newest)</option>
+                  <option value="created-asc">Created (oldest)</option>
+                  <option value="alpha-asc">Title (A→Z)</option>
+                  <option value="alpha-desc">Title (Z→A)</option>
+                  <option value="due-asc">Due Date (earliest)</option>
+                  <option value="due-desc">Due Date (latest)</option>
+                  <option value="priority">Priority (High→Low)</option>
+                  <option value="star">Starred first</option>
+                </select>
+              </div>
+              <div class="flex items-center gap-3">
+                <label class="text-base opacity-80">Theme</label>
+                <select id="theme-select" class="bg-black/40 border border-white/10 rounded p-3 text-base">
+                  <option value="auto">Auto</option>
+                  <option value="dark">Dark</option>
+                  <option value="light">Light</option>
+                </select>
+              </div>
+            </div>
+
+            <!-- Task Form -->
+            <form id="task-form">
+              <input type="text" id="task-title" class="form-input text-base" placeholder="Add a new task..." required/>
+              <div class="form-row">
+                <input type="text" id="task-category" class="form-input text-base" placeholder="Category"/>
+                <input type="datetime-local" id="task-deadline" class="form-input text-base"/>
+                <select id="task-priority" class="form-input text-base">
+                  <option value="low">Low</option>
+                  <option value="medium" selected>Medium</option>
+                  <option value="high">High</option>
+                </select>
+                <select id="task-repeat" class="form-input text-base">
+                  <option value="none" selected>Repeat: None</option>
+                  <option value="daily">Daily</option>
+                  <option value="weekdays">Weekdays</option>
+                  <option value="weekly">Weekly</option>
+                  <option value="monthly">Monthly</option>
+                </select>
+                <button id="task-submit" type="submit" class="btn text-lg"><i class="fas fa-plus"></i></button>
+              </div>
+            </form>
+
+            <div id="task-list"></div>
+          </main>
         </div>
 
-        <!-- Right Column: Quote and Reminders -->
+        <!-- Right: Full-height quote -->
         <aside class="sidebar-column">
-            <div id="quote-container" class="glass-box"></div>
-            <section id="reminders-container" class="glass-box">
-                <h2 id="reminders-title"></h2>
-                <div id="reminder-list"></div>
-            </section>
+          <div id="quote-container" class="glass-box quote-full"></div>
         </aside>
-    </div>
-    
-    <!-- Toast Container -->
-    <div id="toast-container"></div>
+      </div>
+    </section>
 
-    <!-- Custom JS -->
-    <script src="script.js"></script>
+    <!-- Planned Dashboard -->
+    <section id="page-planned" class="route hidden">
+      <div class="grid md:grid-cols-2 gap-6">
+        <section class="glass-box">
+          <h2 class="text-2xl font-semibold mb-5">Upcoming (Next 7 Days)</h2>
+          <div id="planned-upcoming" class="space-y-2"></div>
+        </section>
+        <section class="glass-box">
+          <h2 class="text-2xl font-semibold mb-5">All Reminders</h2>
+          <div id="planned-reminders" class="space-y-2"></div>
+        </section>
+      </div>
+    </section>
+
+    <!-- Settings Dashboard -->
+    <section id="page-settings" class="route hidden">
+      <div class="grid md:grid-cols-2 gap-6">
+        <section class="glass-box">
+          <h2 class="text-2xl font-semibold mb-5">Appearance</h2>
+          <div class="flex items-center gap-4">
+            <label class="text-base opacity-80">Theme</label>
+            <select id="settings-theme" class="bg-black/40 border border-white/10 rounded p-3 text-base">
+              <option value="auto">Auto</option>
+              <option value="dark">Dark</option>
+              <option value="light">Light</option>
+            </select>
+          </div>
+        </section>
+
+        <section class="glass-box">
+          <h2 class="text-2xl font-semibold mb-5">Data</h2>
+          <div class="flex flex-wrap items-center gap-3">
+            <button id="btn-export" class="px-4 py-2 rounded bg-white/10 hover:bg-white/15 text-base">Export JSON</button>
+            <label class="px-4 py-2 rounded bg-white/10 hover:bg-white/15 cursor-pointer text-base">
+              Import JSON
+              <input type="file" id="input-import" accept="application/json" class="hidden"/>
+            </label>
+            <button id="btn-clear" class="px-4 py-2 rounded bg-red-600/80 hover:bg-red-600 text-base">Clear All</button>
+          </div>
+          <textarea id="export-area" class="mt-4 w-full h-48 bg-black/40 border border-white/10 rounded p-3 text-base" placeholder="Exported JSON will appear here..."></textarea>
+        </section>
+      </div>
+    </section>
+
+  </main>
+
+  <!-- Toast -->
+  <div id="toast-container"></div>
+
+  <!-- App JS -->
+  <script src="script.js"></script>
 </body>
 </html>
