--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- index.html (Bigger headings + bigger nav links + full-height quote container) -->
+<!-- index.html (corrected: category dropdown, completed styling support, full-height quote, dark/light/auto themes) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,10 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>To‑Do List & Reminders</title>
 
-  <!-- Font Awesome -->
+  <!-- Icons + Tailwind CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-
-  <!-- Tailwind Play CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Custom CSS -->
@@ -42,7 +40,6 @@
   </header>
 
   <main class="max-w-7xl mx-auto p-4 md:p-6 lg:p-8">
-
     <!-- Tasks Dashboard -->
     <section id="page-tasks" class="route hidden">
       <div class="content-wrapper tasks-wide">
@@ -86,13 +83,34 @@
             <form id="task-form">
               <input type="text" id="task-title" class="form-input text-base" placeholder="Add a new task..." required/>
               <div class="form-row">
-                <input type="text" id="task-category" class="form-input text-base" placeholder="Category"/>
+                <!-- Category as dropdown -->
+                <select id="task-category" class="form-input text-base">
+                  <option value="" selected disabled>Select category</option>
+                  <option value="Work">Work</option>
+                  <option value="Personal">Personal</option>
+                  <option value="Study">Study</option>
+                  <option value="Health">Health</option>
+                  <option value="Fitness">Fitness</option>
+                  <option value="Food">Food</option>
+                  <option value="Shopping">Shopping</option>
+                  <option value="Finance">Finance</option>
+                  <option value="Chores">Chores</option>
+                  <option value="Travel">Travel</option>
+                  <option value="Errands">Errands</option>
+                  <option value="Projects">Projects</option>
+                  <option value="Meetings">Meetings</option>
+                  <option value="Reminders">Reminders</option>
+                  <option value="Other">Other</option>
+                </select>
+
                 <input type="datetime-local" id="task-deadline" class="form-input text-base"/>
+
                 <select id="task-priority" class="form-input text-base">
                   <option value="low">Low</option>
                   <option value="medium" selected>Medium</option>
                   <option value="high">High</option>
                 </select>
+
                 <select id="task-repeat" class="form-input text-base">
                   <option value="none" selected>Repeat: None</option>
                   <option value="daily">Daily</option>
@@ -100,6 +118,7 @@
                   <option value="weekly">Weekly</option>
                   <option value="monthly">Monthly</option>
                 </select>
+
                 <button id="task-submit" type="submit" class="btn text-lg"><i class="fas fa-plus"></i></button>
               </div>
             </form>
@@ -108,7 +127,7 @@
           </main>
         </div>
 
-        <!-- Right: Full-height quote -->
+        <!-- Right: full-height quote -->
         <aside class="sidebar-column">
           <div id="quote-container" class="glass-box quote-full"></div>
         </aside>
@@ -158,7 +177,6 @@
         </section>
       </div>
     </section>
-
   </main>
 
   <!-- Toast -->
